--- a/index.html
+++ b/index.html
@@ -3,18 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>CSR Finserv</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <div class="header-content">
             <div class="title">
-                <h1>Suresh <span class="white-text">MK</span></h1>
-                <p>Authorized Person</p>
+                <h1><span class="colored-text">CSR</span> Finserv</h1>
+                <!-- <p>Authorized Person</p> -->
             </div>
             <div class="contacts">
                 <div class="contact-item contact-phone">
-                    <div class="contact-icon"></div>
+                    <div class="contact-icon">
+                        <img src="images/header-icons/01.jpg" alt="">
+                    </div>
                     <p>
                         9544996262
                         <br>
@@ -22,19 +28,25 @@
                     </p>
                 </div>
                 <div class="contact-item contact-website">
-                    <div class="contact-icon"></div>
+                    <div class="contact-icon">
+                        <img src="images/header-icons/01.jpg" alt="">
+                    </div>
                     <p>
                         www.csrfinserv.com
                     </p>
                 </div>
                 <div class="contact-item contact-email">
-                    <div class="contact-icon"></div>
+                    <div class="contact-icon">
+                        <img src="images/header-icons/01.jpg" alt="">
+                    </div>
                     <p>
                         info@csrfinserv.com
                     </p>
                 </div>
                 <div class="contact-item contact-address">
-                    <div class="contact-icon"></div>
+                    <div class="contact-icon">
+                        <img src="images/header-icons/01.jpg" alt="">
+                    </div>
                     <p>
                         Thachakath Building
                         <br>
@@ -45,59 +57,216 @@
                 </div>
             </div>
         </div>
+        <section class="content-services">
+            <h2>
+                Our Services
+            </h2>
+            <div class="services-blocks">
+                <div class="ser-block">
+                    <h3>
+                        Home Loan
+                    </h3>
+                    <p>
+                        (Purchase, Construction, Rennovation)
+                    </p>
+                </div>
+                <div class="ser-block">
+                    <h3>
+                        Business Loan
+                    </h3>
+                    <p>
+                        Loan Against Property
+                    </p>
+                </div>
+                <div class="ser-block">
+                    <h3>
+                        Loan Take Over & Top Up
+                    </h3>
+                </div>
+                <div class="ser-block">
+                    <h3>
+                        Education Loan
+                    </h3>
+                </div>
+                <div class="ser-block">
+                    <h3>
+                        Personal Loan
+                    </h3>
+                </div>
+                <div class="ser-block">
+                    <h3>
+                        Mutual Fund
+                    </h3>
+                </div>
+                <div class="ser-block">
+                    <h3>
+                        Sip
+                    </h3>
+                </div>
+                <div class="ser-block">
+                    <h3>
+                        Equity
+                    </h3>
+                </div>
+            </div>
+        </section>
     </header>
-    <section class="content-services">
+    
+
+    <section class="benefits">
         <h2>
-            our services
+            Benefits
         </h2>
-        <div class="services-blocks">
-            <div class="ser-block">
-                <h3>
-                    Home Loan
-                </h3>
-                <p>
-                    (Purchase, Construction, Rennovation)
-                </p>
+        <h3>
+            Home Loan Key Features
+        </h3>
+        <div class="benefits-blocks">
+            <div class="benefit-blk">
+                <div class="benefit icon">
+                    <img src="images/benefits-icons/01.jpg" alt="">
+                </div>
+                <div class="benefit-blk_content">
+                    <p>
+                        Special Offer for Central Govt. or State Govt. Employee
+                    </p>
+                </div>
             </div>
-            <div class="ser-block">
-                <h3>
-                    Business Loan
-                </h3>
-                <p>
-                    Loan Against Property
-                </p>
+            <div class="benefit-blk">
+                <div class="benefit icon">
+                    <img src="images/benefits-icons/01.jpg" alt="">
+                </div>
+                <div class="benefit-blk_content">
+                    <p>
+                        Quick and Easy Processing
+                    </p>
+                </div>
             </div>
-            <div class="ser-block">
-                <h3>
-                    Loan Take Over & Top Up
-                </h3>
+            <div class="benefit-blk">
+                <div class="benefit icon">
+                    <img src="images/benefits-icons/01.jpg" alt="">
+                </div>
+                <div class="benefit-blk_content">
+                    <p>
+                        Easy Documentation
+                    </p>
+                </div>
             </div>
-            <div class="ser-block">
-                <h3>
-                    Education Loan
-                </h3>
+            <div class="benefit-blk">
+                <div class="benefit icon">
+                    <img src="images/benefits-icons/01.jpg" alt="">
+                </div>
+                <div class="benefit-blk_content">
+                    <p>
+                        Easy Balance Transfer
+                    </p>
+                </div>
             </div>
-            <div class="ser-block">
-                <h3>
-                    Personal Loan
-                </h3>
+            <div class="benefit-blk">
+                <div class="benefit icon">
+                    <img src="images/benefits-icons/01.jpg" alt="">
+                </div>
+                <div class="benefit-blk_content">
+                    <p>
+                        No Pre-payment Charges
+                    </p>
+                </div>
             </div>
-            <div class="ser-block">
-                <h3>
-                    Mutual Fund
-                </h3>
+            <div class="benefit-blk">
+                <div class="benefit icon">
+                    <img src="images/benefits-icons/01.jpg" alt="">
+                </div>
+                <div class="benefit-blk_content">
+                    <p>
+                        Customized Quote
+                    </p>
+                </div>
             </div>
-            <div class="ser-block">
-                <h3>
-                    Sip
-                </h3>
+            <div class="benefit-blk">
+                <div class="benefit icon">
+                    <img src="images/benefits-icons/01.jpg" alt="">
+                </div>
+                <div class="benefit-blk_content">
+                    <p>
+                        Low Processing Charges
+                    </p>
+                </div>
             </div>
-            <div class="ser-block">
-                <h3>
-                    Equity
-                </h3>
+            <div class="benefit-blk">
+                <div class="benefit icon">
+                    <img src="images/benefits-icons/01.jpg" alt="">
+                </div>
+                <div class="benefit-blk_content">
+                    <p>
+                        No Hidden Charges
+                    </p>
+                </div>
             </div>
         </div>
+    </section>
+    <section class="brand-trust">
+        <div class="brand-trust_header">
+            <h2>Brands who trust us</h2>
+            <p>
+                We are amongst the top 3 most-preferred channel partners for loans for India's widest network of Banks, NBFCs, and Fintech
+            </p>
+        </div>
+        <div class="brand-trust_icons">
+            <img src="images/brand-trust-icons/01.jpg" alt="">
+        </div>
+        <div class="brand-trust_icons"><img src="images/brand-trust-icons/01.jpg" alt=""></div>
+        <div class="brand-trust_icons"><img src="images/brand-trust-icons/01.jpg" alt=""></div>
+        <div class="brand-trust_icons"><img src="images/brand-trust-icons/01.jpg" alt=""></div>
+        <div class="brand-trust_icons"><img src="images/brand-trust-icons/01.jpg" alt=""></div>
+        <div class="brand-trust_icons"><img src="images/brand-trust-icons/01.jpg" alt=""></div>
+        <div class="brand-trust_icons"><img src="images/brand-trust-icons/01.jpg" alt=""></div>
+        <div class="brand-trust_icons"><img src="images/brand-trust-icons/01.jpg" alt=""></div>
+        <div class="brand-trust_icons"><img src="images/brand-trust-icons/01.jpg" alt=""></div>
+        <div class="brand-trust_icons"><img src="images/brand-trust-icons/01.jpg" alt=""></div>
+        <div class="brand-trust_icons"><img src="images/brand-trust-icons/01.jpg" alt=""></div>
+        <div class="brand-trust_icons"><img src="images/brand-trust-icons/01.jpg" alt=""></div>
+        <div class="brand-trust_icons"><img src="images/brand-trust-icons/01.jpg" alt=""></div>
+        <div class="brand-trust_icons"><img src="images/brand-trust-icons/01.jpg" alt=""></div>
+        <div class="brand-trust_icons"><img src="images/brand-trust-icons/01.jpg" alt=""></div>
+        <div class="brand-trust_icons"><img src="images/brand-trust-icons/01.jpg" alt=""></div>
+        <div class="brand-trust_icons"><img src="images/brand-trust-icons/01.jpg" alt=""></div>
+        <div class="brand-trust_icons"><img src="images/brand-trust-icons/01.jpg" alt=""></div>
+        <div class="brand-trust_icons"><img src="images/brand-trust-icons/01.jpg" alt=""></div>
+        <div class="brand-trust_icons"><img src="images/brand-trust-icons/01.jpg" alt=""></div>
+        <div class="brand-trust_icons"><img src="images/brand-trust-icons/01.jpg" alt=""></div>
+        <div class="brand-trust_icons"><img src="images/brand-trust-icons/01.jpg" alt=""></div>
+        <div class="brand-trust_icons"><img src="images/brand-trust-icons/01.jpg" alt=""></div>
+        <div class="brand-trust_icons"><img src="images/brand-trust-icons/01.jpg" alt=""></div>
+        <div class="brand-trust_icons"><img src="images/brand-trust-icons/01.jpg" alt=""></div>
+        <div class="brand-trust_icons"><img src="images/brand-trust-icons/01.jpg" alt=""></div>
+        <div class="brand-trust_icons"><img src="images/brand-trust-icons/01.jpg" alt=""></div>
+        <div class="brand-trust_icons"><img src="images/brand-trust-icons/01.jpg" alt=""></div>
+        <div class="brand-trust_icons"><img src="images/brand-trust-icons/01.jpg" alt=""></div>
+        <div class="brand-trust_icons"><img src="images/brand-trust-icons/01.jpg" alt=""></div>
+        <div class="brand-trust_icons"><img src="images/brand-trust-icons/01.jpg" alt=""></div>
+        <div class="brand-trust_icons"><img src="images/brand-trust-icons/01.jpg" alt=""></div>
+        <div class="brand-trust_icons"><img src="images/brand-trust-icons/01.jpg" alt=""></div>
+        <div class="brand-trust_icons"><img src="images/brand-trust-icons/01.jpg" alt=""></div>
+        <div class="brand-trust_icons"><img src="images/brand-trust-icons/01.jpg" alt=""></div>
+        <div class="brand-trust_icons"><img src="images/brand-trust-icons/01.jpg" alt=""></div>
+        <div class="brand-trust_icons"><img src="images/brand-trust-icons/01.jpg" alt=""></div>
+        <div class="brand-trust_icons"><img src="images/brand-trust-icons/01.jpg" alt=""></div>
+        <div class="brand-trust_icons"><img src="images/brand-trust-icons/01.jpg" alt=""></div>
+        <div class="brand-trust_icons"><img src="images/brand-trust-icons/01.jpg" alt=""></div>
+        <div class="brand-trust_icons"><img src="images/brand-trust-icons/01.jpg" alt=""></div>
+        <div class="brand-trust_icons"><img src="images/brand-trust-icons/01.jpg" alt=""></div>
+        <div class="brand-trust_icons"><img src="images/brand-trust-icons/01.jpg" alt=""></div>
+        <div class="brand-trust_icons"><img src="images/brand-trust-icons/01.jpg" alt=""></div>
+        <div class="brand-trust_icons"><img src="images/brand-trust-icons/01.jpg" alt=""></div>
+        <div class="brand-trust_icons"><img src="images/brand-trust-icons/01.jpg" alt=""></div>
+        <div class="brand-trust_icons"><img src="images/brand-trust-icons/01.jpg" alt=""></div>
+        <div class="brand-trust_icons"><img src="images/brand-trust-icons/01.jpg" alt=""></div>
+        <div class="brand-trust_icons"><img src="images/brand-trust-icons/01.jpg" alt=""></div>
+        <div class="brand-trust_icons"><img src="images/brand-trust-icons/01.jpg" alt=""></div>
+        <div class="brand-trust_icons"><img src="images/brand-trust-icons/01.jpg" alt=""></div>
+        <div class="brand-trust_icons"><img src="images/brand-trust-icons/01.jpg" alt=""></div>
+        <div class="brand-trust_icons"><img src="images/brand-trust-icons/01.jpg" alt=""></div>
+        <div class="brand-trust_icons"><img src="images/brand-trust-icons/01.jpg" alt=""></div>
+        <!-- times 54 -->
     </section>
 </body>
 </html>
