--- a/index.html
+++ b/index.html
@@ -12,48 +12,56 @@
 <body>
     <header>
         <div class="header-content">
-            <div class="title">
-                <h1><span class="colored-text">CSR</span> Finserv</h1>
-                <!-- <p>Authorized Person</p> -->
-            </div>
-            <div class="contacts">
-                <div class="contact-item contact-phone">
-                    <div class="contact-icon">
-                        <img src="images/header-icons/01.jpg" alt="">
+            <div class="header-stuff">
+                <!-- pardun the div soup -->
+                <div class="header-text">
+                    <div class="title">
+                        <h1><span class="colored-text">CSR</span> Finserv</h1>
+                        <!-- <p>Authorized Person</p> -->
                     </div>
-                    <p>
-                        9544996262
-                        <br>
-                        8075095700
-                    </p>
+                    <div class="contacts">
+                        <div class="contact-item contact-phone">
+                            <div class="contact-icon">
+                                <img src="images/header-icons/01.jpg" alt="">
+                            </div>
+                            <p>
+                                9544996262
+                                <br>
+                                8075095700
+                            </p>
+                        </div>
+                        <div class="contact-item contact-website">
+                            <div class="contact-icon">
+                                <img src="images/header-icons/01.jpg" alt="">
+                            </div>
+                            <p>
+                                www.csrfinserv.com
+                            </p>
+                        </div>
+                        <div class="contact-item contact-email">
+                            <div class="contact-icon">
+                                <img src="images/header-icons/01.jpg" alt="">
+                            </div>
+                            <p>
+                                info@csrfinserv.com
+                            </p>
+                        </div>
+                        <div class="contact-item contact-address">
+                            <div class="contact-icon">
+                                <img src="images/header-icons/01.jpg" alt="">
+                            </div>
+                            <p>
+                                Thachakath Building
+                                <br>
+                                Opp: Sooraj Road
+                                <br>
+                                Cheruthuruthy
+                            </p>
+                        </div>
+                    </div>
                 </div>
-                <div class="contact-item contact-website">
-                    <div class="contact-icon">
-                        <img src="images/header-icons/01.jpg" alt="">
-                    </div>
-                    <p>
-                        www.csrfinserv.com
-                    </p>
-                </div>
-                <div class="contact-item contact-email">
-                    <div class="contact-icon">
-                        <img src="images/header-icons/01.jpg" alt="">
-                    </div>
-                    <p>
-                        info@csrfinserv.com
-                    </p>
-                </div>
-                <div class="contact-item contact-address">
-                    <div class="contact-icon">
-                        <img src="images/header-icons/01.jpg" alt="">
-                    </div>
-                    <p>
-                        Thachakath Building
-                        <br>
-                        Opp: Sooraj Road
-                        <br>
-                        Cheruthuruthy
-                    </p>
+                <div class="logo">
+                    <!-- <img src="images/logo.jpg" alt=""> -->
                 </div>
             </div>
         </div>
