--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         </h3>
         <div class="benefits-blocks">
             <div class="benefit-blk">
-                <div class="benefit icon">
+                <div class="benefit-icon">
                     <img src="images/benefits-icons/01.jpg" alt="">
                 </div>
                 <div class="benefit-blk_content">
@@ -140,7 +140,7 @@
                 </div>
             </div>
             <div class="benefit-blk">
-                <div class="benefit icon">
+                <div class="benefit-icon">
                     <img src="images/benefits-icons/01.jpg" alt="">
                 </div>
                 <div class="benefit-blk_content">
@@ -150,7 +150,7 @@
                 </div>
             </div>
             <div class="benefit-blk">
-                <div class="benefit icon">
+                <div class="benefit-icon">
                     <img src="images/benefits-icons/01.jpg" alt="">
                 </div>
                 <div class="benefit-blk_content">
@@ -160,7 +160,7 @@
                 </div>
             </div>
             <div class="benefit-blk">
-                <div class="benefit icon">
+                <div class="benefit-icon">
                     <img src="images/benefits-icons/01.jpg" alt="">
                 </div>
                 <div class="benefit-blk_content">
@@ -170,7 +170,7 @@
                 </div>
             </div>
             <div class="benefit-blk">
-                <div class="benefit icon">
+                <div class="benefit-icon">
                     <img src="images/benefits-icons/01.jpg" alt="">
                 </div>
                 <div class="benefit-blk_content">
@@ -180,7 +180,7 @@
                 </div>
             </div>
             <div class="benefit-blk">
-                <div class="benefit icon">
+                <div class="benefit-icon">
                     <img src="images/benefits-icons/01.jpg" alt="">
                 </div>
                 <div class="benefit-blk_content">
@@ -190,7 +190,7 @@
                 </div>
             </div>
             <div class="benefit-blk">
-                <div class="benefit icon">
+                <div class="benefit-icon">
                     <img src="images/benefits-icons/01.jpg" alt="">
                 </div>
                 <div class="benefit-blk_content">
@@ -200,7 +200,7 @@
                 </div>
             </div>
             <div class="benefit-blk">
-                <div class="benefit icon">
+                <div class="benefit-icon">
                     <img src="images/benefits-icons/01.jpg" alt="">
                 </div>
                 <div class="benefit-blk_content">
