--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         <div class="benefits-blocks">
             <div class="benefit-blk">
                 <div class="benefit-icon">
-                    <img src="images/benefits-icons/01.jpg" alt="">
+                    <img src="images/benefits-icons/01.png" alt="">
                 </div>
                 <div class="benefit-blk_content">
                     <p>
@@ -141,7 +141,7 @@
             </div>
             <div class="benefit-blk">
                 <div class="benefit-icon">
-                    <img src="images/benefits-icons/01.jpg" alt="">
+                    <img src="images/benefits-icons/02.png" alt="">
                 </div>
                 <div class="benefit-blk_content">
                     <p>
@@ -151,7 +151,7 @@
             </div>
             <div class="benefit-blk">
                 <div class="benefit-icon">
-                    <img src="images/benefits-icons/01.jpg" alt="">
+                    <img src="images/benefits-icons/03.png" alt="">
                 </div>
                 <div class="benefit-blk_content">
                     <p>
@@ -161,7 +161,7 @@
             </div>
             <div class="benefit-blk">
                 <div class="benefit-icon">
-                    <img src="images/benefits-icons/01.jpg" alt="">
+                    <img src="images/benefits-icons/04.png" alt="">
                 </div>
                 <div class="benefit-blk_content">
                     <p>
@@ -171,7 +171,7 @@
             </div>
             <div class="benefit-blk">
                 <div class="benefit-icon">
-                    <img src="images/benefits-icons/01.jpg" alt="">
+                    <img src="images/benefits-icons/05.png" alt="">
                 </div>
                 <div class="benefit-blk_content">
                     <p>
@@ -181,7 +181,7 @@
             </div>
             <div class="benefit-blk">
                 <div class="benefit-icon">
-                    <img src="images/benefits-icons/01.jpg" alt="">
+                    <img src="images/benefits-icons/06.png" alt="">
                 </div>
                 <div class="benefit-blk_content">
                     <p>
@@ -191,7 +191,7 @@
             </div>
             <div class="benefit-blk">
                 <div class="benefit-icon">
-                    <img src="images/benefits-icons/01.jpg" alt="">
+                    <img src="images/benefits-icons/07.png" alt="">
                 </div>
                 <div class="benefit-blk_content">
                     <p>
@@ -201,7 +201,7 @@
             </div>
             <div class="benefit-blk">
                 <div class="benefit-icon">
-                    <img src="images/benefits-icons/01.jpg" alt="">
+                    <img src="images/benefits-icons/08.png" alt="">
                 </div>
                 <div class="benefit-blk_content">
                     <p>
@@ -218,62 +218,60 @@
                 We are amongst the top 3 most-preferred channel partners for loans for India's widest network of Banks, NBFCs, and Fintech
             </p>
         </div>
-        <div class="brand-trust_icons">
-            <img src="images/brand-trust-icons/01.jpg" alt="">
-        </div>
         <div class="brand-trust_icons"><img src="images/brand-trust-icons/01.jpg" alt=""></div>
-        <div class="brand-trust_icons"><img src="images/brand-trust-icons/01.jpg" alt=""></div>
-        <div class="brand-trust_icons"><img src="images/brand-trust-icons/01.jpg" alt=""></div>
-        <div class="brand-trust_icons"><img src="images/brand-trust-icons/01.jpg" alt=""></div>
-        <div class="brand-trust_icons"><img src="images/brand-trust-icons/01.jpg" alt=""></div>
-        <div class="brand-trust_icons"><img src="images/brand-trust-icons/01.jpg" alt=""></div>
-        <div class="brand-trust_icons"><img src="images/brand-trust-icons/01.jpg" alt=""></div>
-        <div class="brand-trust_icons"><img src="images/brand-trust-icons/01.jpg" alt=""></div>
-        <div class="brand-trust_icons"><img src="images/brand-trust-icons/01.jpg" alt=""></div>
-        <div class="brand-trust_icons"><img src="images/brand-trust-icons/01.jpg" alt=""></div>
-        <div class="brand-trust_icons"><img src="images/brand-trust-icons/01.jpg" alt=""></div>
-        <div class="brand-trust_icons"><img src="images/brand-trust-icons/01.jpg" alt=""></div>
-        <div class="brand-trust_icons"><img src="images/brand-trust-icons/01.jpg" alt=""></div>
-        <div class="brand-trust_icons"><img src="images/brand-trust-icons/01.jpg" alt=""></div>
-        <div class="brand-trust_icons"><img src="images/brand-trust-icons/01.jpg" alt=""></div>
-        <div class="brand-trust_icons"><img src="images/brand-trust-icons/01.jpg" alt=""></div>
-        <div class="brand-trust_icons"><img src="images/brand-trust-icons/01.jpg" alt=""></div>
-        <div class="brand-trust_icons"><img src="images/brand-trust-icons/01.jpg" alt=""></div>
-        <div class="brand-trust_icons"><img src="images/brand-trust-icons/01.jpg" alt=""></div>
-        <div class="brand-trust_icons"><img src="images/brand-trust-icons/01.jpg" alt=""></div>
-        <div class="brand-trust_icons"><img src="images/brand-trust-icons/01.jpg" alt=""></div>
-        <div class="brand-trust_icons"><img src="images/brand-trust-icons/01.jpg" alt=""></div>
-        <div class="brand-trust_icons"><img src="images/brand-trust-icons/01.jpg" alt=""></div>
-        <div class="brand-trust_icons"><img src="images/brand-trust-icons/01.jpg" alt=""></div>
-        <div class="brand-trust_icons"><img src="images/brand-trust-icons/01.jpg" alt=""></div>
-        <div class="brand-trust_icons"><img src="images/brand-trust-icons/01.jpg" alt=""></div>
-        <div class="brand-trust_icons"><img src="images/brand-trust-icons/01.jpg" alt=""></div>
-        <div class="brand-trust_icons"><img src="images/brand-trust-icons/01.jpg" alt=""></div>
-        <div class="brand-trust_icons"><img src="images/brand-trust-icons/01.jpg" alt=""></div>
-        <div class="brand-trust_icons"><img src="images/brand-trust-icons/01.jpg" alt=""></div>
-        <div class="brand-trust_icons"><img src="images/brand-trust-icons/01.jpg" alt=""></div>
-        <div class="brand-trust_icons"><img src="images/brand-trust-icons/01.jpg" alt=""></div>
-        <div class="brand-trust_icons"><img src="images/brand-trust-icons/01.jpg" alt=""></div>
-        <div class="brand-trust_icons"><img src="images/brand-trust-icons/01.jpg" alt=""></div>
-        <div class="brand-trust_icons"><img src="images/brand-trust-icons/01.jpg" alt=""></div>
-        <div class="brand-trust_icons"><img src="images/brand-trust-icons/01.jpg" alt=""></div>
-        <div class="brand-trust_icons"><img src="images/brand-trust-icons/01.jpg" alt=""></div>
-        <div class="brand-trust_icons"><img src="images/brand-trust-icons/01.jpg" alt=""></div>
-        <div class="brand-trust_icons"><img src="images/brand-trust-icons/01.jpg" alt=""></div>
-        <div class="brand-trust_icons"><img src="images/brand-trust-icons/01.jpg" alt=""></div>
-        <div class="brand-trust_icons"><img src="images/brand-trust-icons/01.jpg" alt=""></div>
-        <div class="brand-trust_icons"><img src="images/brand-trust-icons/01.jpg" alt=""></div>
-        <div class="brand-trust_icons"><img src="images/brand-trust-icons/01.jpg" alt=""></div>
-        <div class="brand-trust_icons"><img src="images/brand-trust-icons/01.jpg" alt=""></div>
-        <div class="brand-trust_icons"><img src="images/brand-trust-icons/01.jpg" alt=""></div>
-        <div class="brand-trust_icons"><img src="images/brand-trust-icons/01.jpg" alt=""></div>
-        <div class="brand-trust_icons"><img src="images/brand-trust-icons/01.jpg" alt=""></div>
-        <div class="brand-trust_icons"><img src="images/brand-trust-icons/01.jpg" alt=""></div>
-        <div class="brand-trust_icons"><img src="images/brand-trust-icons/01.jpg" alt=""></div>
-        <div class="brand-trust_icons"><img src="images/brand-trust-icons/01.jpg" alt=""></div>
-        <div class="brand-trust_icons"><img src="images/brand-trust-icons/01.jpg" alt=""></div>
-        <div class="brand-trust_icons"><img src="images/brand-trust-icons/01.jpg" alt=""></div>
-        <div class="brand-trust_icons"><img src="images/brand-trust-icons/01.jpg" alt=""></div>
+        <div class="brand-trust_icons"><img src="images/brand-trust-icons/02.jpg" alt=""></div>
+        <div class="brand-trust_icons"><img src="images/brand-trust-icons/03.jpg" alt=""></div>
+        <div class="brand-trust_icons"><img src="images/brand-trust-icons/04.jpg" alt=""></div>
+        <div class="brand-trust_icons"><img src="images/brand-trust-icons/05.jpg" alt=""></div>
+        <div class="brand-trust_icons"><img src="images/brand-trust-icons/06.jpg" alt=""></div>
+        <div class="brand-trust_icons"><img src="images/brand-trust-icons/07.jpg" alt=""></div>
+        <div class="brand-trust_icons"><img src="images/brand-trust-icons/08.jpg" alt=""></div>
+        <div class="brand-trust_icons"><img src="images/brand-trust-icons/09.jpg" alt=""></div>
+        <div class="brand-trust_icons"><img src="images/brand-trust-icons/10.jpg" alt=""></div>
+        <div class="brand-trust_icons"><img src="images/brand-trust-icons/11.jpg" alt=""></div>
+        <div class="brand-trust_icons"><img src="images/brand-trust-icons/12.jpg" alt=""></div>
+        <div class="brand-trust_icons"><img src="images/brand-trust-icons/13.jpg" alt=""></div>
+        <div class="brand-trust_icons"><img src="images/brand-trust-icons/14.jpg" alt=""></div>
+        <div class="brand-trust_icons"><img src="images/brand-trust-icons/15.jpg" alt=""></div>
+        <div class="brand-trust_icons"><img src="images/brand-trust-icons/16.jpg" alt=""></div>
+        <div class="brand-trust_icons"><img src="images/brand-trust-icons/17.jpg" alt=""></div>
+        <div class="brand-trust_icons"><img src="images/brand-trust-icons/18.jpg" alt=""></div>
+        <div class="brand-trust_icons"><img src="images/brand-trust-icons/19.jpg" alt=""></div>
+        <div class="brand-trust_icons"><img src="images/brand-trust-icons/20.jpg" alt=""></div>
+        <div class="brand-trust_icons"><img src="images/brand-trust-icons/21.jpg" alt=""></div>
+        <div class="brand-trust_icons"><img src="images/brand-trust-icons/22.jpg" alt=""></div>
+        <div class="brand-trust_icons"><img src="images/brand-trust-icons/23.jpg" alt=""></div>
+        <div class="brand-trust_icons"><img src="images/brand-trust-icons/24.jpg" alt=""></div>
+        <div class="brand-trust_icons"><img src="images/brand-trust-icons/25.jpg" alt=""></div>
+        <div class="brand-trust_icons"><img src="images/brand-trust-icons/26.jpg" alt=""></div>
+        <div class="brand-trust_icons"><img src="images/brand-trust-icons/27.jpg" alt=""></div>
+        <div class="brand-trust_icons"><img src="images/brand-trust-icons/28.jpg" alt=""></div>
+        <div class="brand-trust_icons"><img src="images/brand-trust-icons/29.jpg" alt=""></div>
+        <div class="brand-trust_icons"><img src="images/brand-trust-icons/30.jpg" alt=""></div>
+        <div class="brand-trust_icons"><img src="images/brand-trust-icons/31.jpg" alt=""></div>
+        <div class="brand-trust_icons"><img src="images/brand-trust-icons/32.jpg" alt=""></div>
+        <div class="brand-trust_icons"><img src="images/brand-trust-icons/33.jpg" alt=""></div>
+        <div class="brand-trust_icons"><img src="images/brand-trust-icons/34.jpg" alt=""></div>
+        <div class="brand-trust_icons"><img src="images/brand-trust-icons/35.jpg" alt=""></div>
+        <div class="brand-trust_icons"><img src="images/brand-trust-icons/36.jpg" alt=""></div>
+        <div class="brand-trust_icons"><img src="images/brand-trust-icons/37.jpg" alt=""></div>
+        <div class="brand-trust_icons"><img src="images/brand-trust-icons/38.jpg" alt=""></div>
+        <div class="brand-trust_icons"><img src="images/brand-trust-icons/39.jpg" alt=""></div>
+        <div class="brand-trust_icons"><img src="images/brand-trust-icons/40.jpg" alt=""></div>
+        <div class="brand-trust_icons"><img src="images/brand-trust-icons/41.jpg" alt=""></div>
+        <div class="brand-trust_icons"><img src="images/brand-trust-icons/42.jpg" alt=""></div>
+        <div class="brand-trust_icons"><img src="images/brand-trust-icons/43.jpg" alt=""></div>
+        <div class="brand-trust_icons"><img src="images/brand-trust-icons/44.jpg" alt=""></div>
+        <div class="brand-trust_icons"><img src="images/brand-trust-icons/45.jpg" alt=""></div>
+        <div class="brand-trust_icons"><img src="images/brand-trust-icons/46.jpg" alt=""></div>
+        <div class="brand-trust_icons"><img src="images/brand-trust-icons/47.jpg" alt=""></div>
+        <div class="brand-trust_icons"><img src="images/brand-trust-icons/48.jpg" alt=""></div>
+        <div class="brand-trust_icons"><img src="images/brand-trust-icons/49.jpg" alt=""></div>
+        <div class="brand-trust_icons"><img src="images/brand-trust-icons/50.jpg" alt=""></div>
+        <div class="brand-trust_icons"><img src="images/brand-trust-icons/51.jpg" alt=""></div>
+        <div class="brand-trust_icons"><img src="images/brand-trust-icons/52.jpg" alt=""></div>
+        <div class="brand-trust_icons"><img src="images/brand-trust-icons/53.jpg" alt=""></div>
+        <div class="brand-trust_icons"><img src="images/brand-trust-icons/54.jpg" alt=""></div>
         <!-- times 54 -->
     </section>
 </body>
