number to white

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                             <div class="contact-icon">
                                 <img src="images/header-icons/01.jpg" alt="">
                             </div>
-                            <p>
+                            <p color="white">
                                 9544996262
                                 <br>
                                 8075095700
